--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "antd": "^3.21.4",
+    "apollo-boost": "^0.4.4",
     "gatsby": "^2.13.58",
     "gatsby-image": "^2.2.8",
+    "gatsby-plugin-antd": "^2.0.2",
     "gatsby-plugin-manifest": "^2.2.5",
     "gatsby-plugin-offline": "^2.2.5",
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sharp": "^2.2.11",
     "gatsby-source-filesystem": "^2.1.9",
     "gatsby-transformer-sharp": "^2.2.6",
+    "graphql": "^14.4.2",
+    "graphql-tag": "^2.10.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
