--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "antd": "^3.21.4",
     "apollo-boost": "^0.4.4",
+    "axios": "^0.19.0",
     "gatsby": "^2.13.58",
     "gatsby-image": "^2.2.8",
     "gatsby-plugin-antd": "^2.0.2",
@@ -20,6 +21,7 @@
     "graphql-tag": "^2.10.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-apollo": "^3.0.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1"
   },
